# rectangle-dropping-data-structure

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py
docs/: benchmark.csv  game.json  index.html  paper-mapping.md  player.html
src/rdds/: __init__.py
src/rdds/core/: __init__.py  chunk.py  events.py  geometry.py  naive.py  recording.py  skyline.py  structure.py
src/rdds/demo/: __init__.py  tetris.py
src/rdds/viz/: __init__.py  renderer.py
src/rdds/web/: __init__.py  template.html
tests/: conftest.py  test_animator.py  test_chunk.py  test_demo.py  test_naive.py  test_recording.py  test_skyline.py  test_structure.py  test_web.py
