[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rectangle-dropping-data-structure"
version = "1.0.0"
description = "Reference implementation of the Rectangle Dropping Data Structure from Dallant & Iacono, 'How fast can we play Tetris greedily with rectangular pieces?' (arXiv:2202.10771)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Davide Toniatti" }]
keywords = ["tetris", "data-structure", "computational-geometry", "skyline"]
dependencies = ["sortedcontainers>=2.4"]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]
dev = ["pytest>=8", "hypothesis>=6.100", "ruff>=0.4", "mypy>=1.10", "matplotlib>=3.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/rdds"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/rdds"]

[[tool.mypy.overrides]]
module = [
    "sortedcontainers",
    "sortedcontainers.*",
    "matplotlib",
    "matplotlib.*",
    "numpy",
    "numpy.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["rdds.viz.*", "rdds.demo.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
